# TunesBack

./: .gitmodules  README.md  Thumbs.db  TunesBack.spec  generate_wrapped.py  listening_age_algorithm.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: Thumbs.db
assets/screenshots/: Thumbs.db
